--- a/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
+++ b/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
@@ -1,4 +1,5 @@
-name: angular-demo-docker-build-deploy
+name: autodevops-angular-demo-docker-build-deploy
+
 on:
   push:
     branches:
@@ -9,148 +10,143 @@ on:
   workflow_dispatch:
 
 concurrency:
-  group: build-deploy-${{ github.head_ref || github.run_id }}
+  group: autodevops-angular-demo-docker-build-deploy-${{ github.ref }}
   cancel-in-progress: true
 
 permissions:
   contents: read
   id-token: write
-  packages: write
+  actions: read
 
 jobs:
-  build:
-    name: Build Angular App
+  code-security-scan:
+    name: Security and Linting Checks
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 10
     steps:
-      - name: Checkout code
+      - name: Checkout source
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "18.x"
-          cache: 'npm'
-
+          node-version: 20.x
       - name: Install dependencies
         run: npm ci
-
       - name: Lint code
         run: npm run lint
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@v3.0.0
+        with:
+          command: test
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      - name: Upload Snyk HTML Report (if generated)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: snyk-html-report
+          path: snyk-report.html
+          if-no-files-found: ignore
 
-      - name: Run tests
-        run: npm run test -- --watch=false --browsers=ChromeHeadlessNoSandbox --code-coverage
-
-      - name: Build production
-        run: npm run build -- --configuration=production
-
-      - name: Upload build artifact
+  build:
+    name: Build Angular Production Artifacts
+    runs-on: ubuntu-latest
+    needs: code-security-scan
+    timeout-minutes: 15
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+      - name: Install dependencies
+        run: npm ci
+      - name: Run unit tests
+        run: npm run test -- --watch=false --browsers=ChromeHeadless
+      - name: Build Angular app
+        run: npm run build -- --configuration production
+      - name: Upload Angular dist
         uses: actions/upload-artifact@v4
         with:
           name: angular-dist
           path: dist/
 
-  dockerize:
-    name: Build & Push Docker Image
+  docker-image:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: build
     timeout-minutes: 20
     env:
-      IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/angular-demo-docker:${{ github.sha }}
+      DOCKER_IMAGE: ghcr.io/${{ github.repository }}/angular-demo:${{ github.sha }}
     steps:
-      - name: Checkout code
+      - name: Checkout source
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-
-      - name: Download build artifact
+      - name: Download Angular dist
         uses: actions/download-artifact@v4
         with:
           name: angular-dist
           path: dist/
-
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: Dockerfile
           push: true
-          tags: ${{ env.IMAGE_NAME }}
-
+          tags: ${{ env.DOCKER_IMAGE }}
+          build-args: |
+            DIST_FOLDER=dist/
       - name: Image digest
-        run: echo "Docker image digest ${{ steps.docker_build.outputs.digest }}"
+        run: echo "Digest ${{ steps.docker_build.outputs.digest }}"
 
   deploy:
-    name: Deploy to Production
+    name: Deploy to Production Environment
     runs-on: ubuntu-latest
-    needs: dockerize
-    timeout-minutes: 15
+    needs: docker-image
     if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
-    environment:
-      name: production
-      url: ${{ steps.deploy.outputs.url }}
+    timeout-minutes: 15
+    env:
+      DEPLOY_IMAGE: ghcr.io/${{ github.repository }}/angular-demo:${{ github.sha }}
     steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: angular-dist
-          path: dist/
+      - name: Prepare Deployment (Placeholder)
+        run: echo "Deployment to production should be implemented using your infrastructure’s requirements."
+      # Uncomment and configure the section below for a real deployment destination, e.g., Kubernetes, Azure, ECS
+      # - name: Set up kubectl
+      #   uses: azure/setup-kubectl@v3
+      #   with:
+      #     version: v1.28.0
+      # - name: Set up KubeConfig
+      #   run: echo "${KUBECONFIG_BASE64}" | base64 --decode > k8sconfig
+      #   env:
+      #     KUBECONFIG_BASE64: ${{ secrets.KUBECONFIG_BASE64 }}
+      # - name: Deploy to Kubernetes
+      #   run: |
+      #     kubectl --kubeconfig=k8sconfig set image deployment/angular-demo angular-demo=${{ env.DEPLOY_IMAGE }}
+      #     kubectl --kubeconfig=k8sconfig rollout status deployment/angular-demo
 
-      - name: Set up deployment credentials
-        run: echo "Configure your deployment secrets and credentials here."
-        shell: bash
-
-      - name: Deploy to cloud/VM
-        id: deploy
-        run: |
-          echo "Deploying docker image ${{ needs.dockerize.outputs.image }}"
-          # Actual deploy step placeholder
-          # Use SSH, cloud provider, or GitHub Deployments API here
-          DEPLOYMENT_URL="https://yourapp.example.com"
-          echo "url=${DEPLOYMENT_URL}" >> $GITHUB_OUTPUT
-
-  security:
-    name: Code Scanning
+  codeql:
+    name: Code Scanning - CodeQL
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
     permissions:
-      security-events: write
       actions: read
       contents: read
+      security-events: write
     steps:
-      - name: Checkout code
+      - name: Checkout source
         uses: actions/checkout@v4
-
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
           languages: javascript
-
       - name: Autobuild
         uses: github/codeql-action/autobuild@v3
-
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
-
-  dependabot:
-    name: Dependency Vulnerability Scan
-    runs-on: ubuntu-latest
-    timeout-minutes: 8
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Run npm audit
-        run: npm audit --production --audit-level=high || true
