--- a/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
+++ b/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
@@ -1,93 +1,112 @@
-name: autodevops-angular-demo-docker-build-deploy
+name: Angular Build and Deploy Pipeline
 
 on:
   push:
-    branches:
-      - main
-      - master
+    branches: [main]
   pull_request:
-    branches:
-      - main
-      - master
+    branches: [main]
   workflow_dispatch:
 
 concurrency:
-  group: autodevops-angular-demo-docker-${{ github.ref }}-${{ github.event.pull_request.number || github.sha }}
+  group: build-and-deploy-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 permissions:
   contents: read
-  packages: write
-  pages: write
   id-token: write
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  packages: write
 
 jobs:
-  build-and-deploy:
+  build:
+    name: Build Angular App
     runs-on: ubuntu-latest
-    timeout-minutes: 25
-
+    timeout-minutes: 20
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 18
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
+      - name: Lint code
+        run: npm run lint --if-present
+
       - name: Run tests
-        run: npm run test -- --watch=false --browsers=ChromeHeadless
+        run: npm test -- --watch=false --browsers=ChromeHeadlessCI || npm test -- --watch=false
+        env:
+          CHROME_BIN: chromium-browser
 
-      - name: Build production
-        run: npm run build -- --configuration=production
+      - name: Build Angular app
+        run: npm run build -- --prod
 
-      - name: Log in to the Container registry
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: angular-dist
+          path: dist/
+
+  docker-build:
+    name: Build and Push Docker Image
+    runs-on: ubuntu-latest
+    needs: build
+    timeout-minutes: 20
+    environment: production
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: angular-dist
+          path: dist/
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile
+          file: Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ghcr.io/${{ github.repository }}:latest
 
-      - name: Deploy to GitHub Pages
-        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist/angular-demo-docker
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: docker-build
+    timeout-minutes: 20
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - name: Deploy step
+        run: echo "Implement deployment here (to Kubernetes, Docker Swarm, etc)"
 
-  codeql-analysis:
-    name: CodeQL Analyze
+  codeql:
+    name: CodeQL Analysis
     runs-on: ubuntu-latest
     timeout-minutes: 15
     permissions:
       actions: read
-      contents: read
       security-events: write
-
-    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
-
+      contents: read
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -97,10 +116,10 @@ jobs:
         with:
           languages: javascript
 
-      - name: Build project for CodeQL
-        run: |
-          npm ci
-          npm run build -- --configuration=production
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
+        with:
+          category: /language:javascript
