--- a/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
+++ b/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
@@ -1,14 +1,16 @@
-name: Angular Build and Deploy Pipeline
+name: autodevops-angular-demo-docker-build-deploy
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
+    branches:
+      - main
   workflow_dispatch:
 
 concurrency:
-  group: build-and-deploy-${{ github.event.pull_request.number || github.ref }}
+  group: angular-demo-docker-${{ github.ref }}
   cancel-in-progress: true
 
 permissions:
@@ -17,109 +19,141 @@ permissions:
   packages: write
 
 jobs:
-  build:
-    name: Build Angular App
+  code-scanning:
+    name: Code Scanning
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 10
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
         with:
-          fetch-depth: 1
+          languages: javascript
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
 
+  install-and-test:
+    name: Install Dependencies & Test
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    needs: code-scanning
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: '18'
           cache: 'npm'
-
       - name: Install dependencies
         run: npm ci
-
-      - name: Lint code
-        run: npm run lint --if-present
-
+      - name: Lint
+        run: npm run lint
       - name: Run tests
-        run: npm test -- --watch=false --browsers=ChromeHeadlessCI || npm test -- --watch=false
-        env:
-          CHROME_BIN: chromium-browser
+        run: npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
 
-      - name: Build Angular app
-        run: npm run build -- --prod
-
-      - name: Upload build artifacts
+  build-angular:
+    name: Build Angular App
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    needs: install-and-test
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm ci
+      - name: Build Angular
+        run: npm run build -- --configuration production
+      - name: Upload built app artifact
         uses: actions/upload-artifact@v4
         with:
           name: angular-dist
           path: dist/
 
-  docker-build:
-    name: Build and Push Docker Image
+  docker-build-publish:
+    name: Build & Publish Docker Image
     runs-on: ubuntu-latest
-    needs: build
-    timeout-minutes: 20
-    environment: production
+    timeout-minutes: 15
+    needs: build-angular
+    env:
+      IMAGE_NAME: ghcr.io/${{ github.repository }}
+      TAG: ${{ github.sha }}
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-
-      - name: Download build artifacts
+      - name: Download Angular artifact
         uses: actions/download-artifact@v4
         with:
           name: angular-dist
           path: dist/
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository }}:latest
+          tags: |
+            ${{ env.IMAGE_NAME }}:${{ env.TAG }}
+            ${{ env.IMAGE_NAME }}:latest
+      - name: Save Docker Tag
+        run: echo ${{ env.IMAGE_NAME }}:${{ env.TAG }} > image_tag.txt
+      - name: Upload Docker Tag Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: docker-image-tag
+          path: image_tag.txt
 
   deploy:
-    name: Deploy
+    name: Deploy to Production
     runs-on: ubuntu-latest
-    needs: docker-build
+    environment:
+      name: production
+      url: ${{ steps.deploy.outputs.deployment-url }}
+    needs: docker-build-publish
     timeout-minutes: 20
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
-      - name: Deploy step
-        run: echo "Implement deployment here (to Kubernetes, Docker Swarm, etc)"
-
-  codeql:
-    name: CodeQL Analysis
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    permissions:
-      actions: read
-      security-events: write
-      contents: read
-    steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
+      - name: Download Docker Tag
+        uses: actions/download-artifact@v4
         with:
-          languages: javascript
+          name: docker-image-tag
+      - name: Set Docker Tag as variable
+        id: image
+        run: echo "DOCKER_IMAGE=$(cat image_tag.txt)" >> $GITHUB_ENV
+      - name: Deploy Application
+        id: deploy
+        run: |
+          echo "Simulated deploy of $DOCKER_IMAGE"
+          echo "deployment-url=https://your-production-url.example.com" >> $GITHUB_OUTPUT
+        env:
+          DOCKER_IMAGE: ${{ env.DOCKER_IMAGE }}
 
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+  cleanup:
+    name: Cleanup Artifacts
+    runs-on: ubuntu-latest
+    if: always()
+    needs: [deploy]
+    steps:
+      - name: Remove workflow artifacts
+        uses: geekyeggo/delete-artifact@v5
         with:
-          category: /language:javascript
+          name: |
+            angular-dist
+            docker-image-tag
